# fastapi_doc_rag

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.docs  Dockerfile.frontend  README.md  debug_view_jsonl.py  docker-compose.yml  mkdocs.yml  pyproject.toml
analysis/: chunk_stats.py
app/: config.py  context_builder.py  debug_retrieve.py  ingest_worker.py  llm_client.py  main.py  retriever.py  retriever_first_steps.py  schemas.py  test_retrieval.py
docs/: architecture.md  concurrent_ingestion.md  dataflow.md  deployment.md  fashion_clip_ingestion.md  index.md  multiprocessing_pipeline.md
frontend/: app.js  style.css
ingestion/: chunk_analysis.py  chunk_first_steps.py  chunk_markdown.py  embed_core.py  embed_first_steps.py  ingest.py  ingest_image_worker.py  ingest_worker.py  parse_first_steps.py  parse_markdown.py  run_chunker_markdown.py  run_parse_markdown.py  sync_docs_src.py
processed/: docs_src_manifest.txt  first_steps_admonitions_by_id.json  first_steps_chunks.json  first_steps_headings_by_id.json  first_steps_nodes_by_id.json  first_steps_page.json  first_steps_page.jsonl  first_steps_section_timings.json  first_steps_sections.jsonl  first_steps_tree.json
scratch/: analyze_concurrency.py  benchmark_base64_control.py  benchmark_base64_direct.py  benchmark_threads.py  parse_flamegraph.py  parse_flamegraph_all.py  parse_gil_waiting.py  parse_subprocesses.py  parse_tensor_conversion.py  profile_cpu_freq.py  profile_direct_embedded.py  profile_l3_during_bombardment.py  run_locust_evaluation_csv.py  run_locust_image_evaluation_csv.py  temp_child.py  (+2 more)
(+426 files in other folders)
