[project]
name = "fastapi-doc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.6.1",
    "orjson>=3.11.9",
    "pyromark>=0.9.10",
]
