[project]
name = "fastapi-doc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chonkie>=1.6.7",
    "fastapi[standard]>=0.136.1",
    "jsonschema>=4.26.0",
    "markdown-it-py>=4.2.0",
    "matplotlib>=3.10.9",
    "mdit-py-plugins>=0.6.1",
    "onnxruntime>=1.26.0",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pyromark>=0.9.10",
    "qdrant-client[fastembed]>=1.18.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
